testing/macro-tests/tests/ui/decimal_requires_scale.rs
use icydb::design::prelude::*;

#[newtype(primitive = "Decimal", item(prim = "Decimal"))]
pub struct DecimalWithoutScale;

fn main() {}
